# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  02 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    Add ramfs to the don't unmount this fs type list, #151128.
    We now use the bash 3.2 =~ semantic, #151108.

  01 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    Clarified pppd maxfail usage, #153657 thanks to Toralf Förster.

    checkfs now has an FSCK_SHUTDOWN variable which triggers an fsck
    of local disks at shutdown to save on long startup delays when
    doing a full fsck. Fixes #152983, thanks to Daniel Drake.

  31 Oct 2006; Roy Marples <uberlord@gentoo.org>:

    tuntap should come before bridge, #150520.

* baselayout-1.13.0_alpha4 (31 Oct 2006)

  30 Oct 2006; Roy Marples <uberlord@gentoo.org>:

    depscan.sh and rc-depend can now handle other deptrees as we now create
    one for our network modules.
    net.sh as been re-written for loading modules resulting in a slight
    speed increase.
    ifconfig and iproute2 now work with text aliases thanks to Krzysztof
    Moscicki.
    Makefile now works with catalyst installs, #153057.

  30 Oct 2006; Mike Frysinger <vapier@gentoo.org>:

    Add a note for static /dev that it is indeed static and they need to
    create all the device nodes #153045 by Thilo Bangert.

* baselayout-1.13.0_alpha3 (24 Oct 2006)

  23 Oct 2006; Roy Marples <uberlord@gentoo.org>:

    Add GNU/kFreeBSD support, #121784 thanks to Robert Millan.

  22 Oct 2006; Roy Marples <uberlord@gentoo.org>:

    Added new C program rc-depend which calculates init script dependencies,
    provides and ordering based on the deptree made by our awk scripts.
    This solves the big pause seen when running rc or changing runlevels.

    RC_STRICT_NET_CHECKING has been punted in favour of a more generic
    framework where we check runlevel, running (only if nothing in runlevel)
    and then boot runlevel.
